test/TauCode.Mq.EasyNetQ.Tests/Handlers/Bad/AbstractHandler.cs
using TauCode.Mq.EasyNetQ.Tests.Messages.Good;

namespace TauCode.Mq.EasyNetQ.Tests.Handlers.Bad;

public abstract class AbstractHandler : MessageHandlerBase<HelloMessage>
{
}